tests/ui/obs_double_consume.stderr
error[E0599]: no function or associated item named `new` found for struct `AtLeastOnce` in the current scope
 --> tests/ui/obs_double_consume.rs:5:22
  |
5 |         AtLeastOnce::new(CheckpointId::new("obs-double-consume")),
  |                      ^^^ function or associated item not found in `AtLeastOnce`
  |
help: there is a method `ne` with a similar name
  |
5 -         AtLeastOnce::new(CheckpointId::new("obs-double-consume")),
5 +         AtLeastOnce::ne(CheckpointId::new("obs-double-consume")),
  |
